Fix footer overlap issues

--- a/docfx/templates/material/styles/main.css
+++ b/docfx/templates/material/styles/main.css
@@ -649,7 +649,7 @@ code {
 .article{
   padding-top:0;
   margin-top:0;
-  margin-bottom: 40px;
+  margin-bottom: 75px;
 }
 
 @media screen and (max-width: 767px) {
@@ -670,8 +670,7 @@ code {
 
 }
 
-header,
-footer{
+header{
   position:inherit;
   z-index: unset;
 }
